# molecular-stability-computer

./: README.md  compute_emin.py  environment.yml  pyproject.toml
.github/workflows/: python-app.yml
background/: 0_label-qm9-as-synthesizable.ipynb  1_demonstrate-emin.ipynb  1_get-qm9-energies.py  2_evaluate-approximation-levels.ipynb  2_get-qm9-energies.py  3_evaluate-approximation-levels.ipynb  4_validate-on-larger-molecules.ipynb  README.md
datasets/: README.md  dandu-heavy.smi  jcesr-leaderboard.smi  lohc.smi
emin/: app.py  generate.py  parsl.py  qcengine.py  source.py
parsl-configs/: README.md  local-single-core.py  theta-whole-node.py  theta-whole-tile-debug.py  theta-whole-tile.py
tests/: test_app.py  test_generate.py  test_parsl.py  test_qcengine.py  test_source.py
tests/files/: test-spec.py  water-no-relax.json  water-relax.json
timing-run/: README.md  evaluate-runtimes.ipynb  evaluate-speed.sh
