[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = 'emin'
version = '0.0.1'
description = 'Assess synthesizability from the relative stability of molecules'
authors = [
    'Logan Ward <ward.logan.t@gmail.com>'
]
packages = [
    {include = "emin"},
]

[tool.poetry.dependencies]
requests = "^2.13.0"
parsl = "^2023.10.23"
qcengine = "^0.29.0"
rdkit = "^2023.9.1"
geometric = "^0.9"
pytest = { optional = true }
pytest-cov = { optional = true }

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]
